# TriGuard

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  folder-arc.md  graph_analysis.sh
aby3-DB/: CMakeLists.txt  OblvPermutation.cpp  OblvPermutation.h  OblvSwitchNet.cpp  OblvSwitchNet.h
aby3-DB_tests/: CMakeLists.txt  LowMC.h  PermutaitonTests.cpp  PermutaitonTests.h  UnitTests.cpp  lowMC.cpp
aby3-Graph/: CMakeLists.txt  OEP.cpp  OEP.h  OGA.cpp  OGA.h  cc.cpp  cc.h  cognn_cc.cpp  cognn_cc.h  graphsc.cpp  graphsc.h  operators.cpp  operators.h  ours.cpp  ours.h  shuffle.cpp  shuffle.h  sort.cpp  sort.h  utils.cpp  utils.h
aby3-Graph_tests/: CMakeLists.txt  graph_tests.cpp  graph_tests.h  tests.cpp  tests.h
aby3-ML/: CMakeLists.txt
aby3/sh3/: Sh3Encryptor.cpp  Sh3Encryptor.h
aby3_tests/: Sh3BinaryEvaluatorTests.cpp  Sh3BinaryEvaluatorTests.h  aby3_tests.cpp
demo/: CMakeLists.txt  README.md  demo_func.cpp  demo_func.h  main.cpp  tmp_run_cluster.py  visualize.py
demo/plot/: plot_3pc_cmp.py  plot_e2e.py  plot_vertex_degrees.py
demo/scripts/: clean_network.sh
eval/: CMakeLists.txt  eval_func.cpp  eval_func.h  main.cpp  tmp_run_cluster.py
eval/plot/: plot_ablation.py  plot_num_parties.py  plot_scales.py
eval/scripts/: setup_network.sh
frontend/: CMakeLists.txt  main.cpp
